chandeliers-lus/tests/fail/ui/options/not-applicable.rs
chandeliers_lus::decl! {
    #[main]
    const X : int = 0;
}

fn main() {}
